Form y primer diseño

--- a/NotasMedicas/NotasMedicas/static/css/estilos.css
+++ b/NotasMedicas/NotasMedicas/static/css/estilos.css
@@ -25,3 +25,17 @@
 	margin: auto;
 }
 /*Termina login*/
+
+/*Formularios de captura*/
+
+form ul
+{
+	list-style: none;
+}
+
+form ul li
+{
+	display: inline-block;
+	vertical-align: top;
+}
+/**/
