Test 1 de responsive
Usando bootstrap para diseño responsive

--- a/NotasMedicas/NotasMedicas/static/css/estilos.css
+++ b/NotasMedicas/NotasMedicas/static/css/estilos.css
@@ -27,15 +27,8 @@
 /*Termina login*/
 
 /*Formularios de captura*/
-
-form ul
+#tbl1
 {
-	list-style: none;
-}
-
-form ul li
-{
-	display: inline-block;
-	vertical-align: top;
+	padding: 1em 2em 1em 2em;
 }
 /**/
