--- a/NotasMedicas/NotasMedicas/templates/tbl1.html
+++ b/NotasMedicas/NotasMedicas/templates/tbl1.html
@@ -2,7 +2,7 @@
 
 {% block captura  %}
 
-<form action="POST" class="form-horizontal" role="form">
+<form action="POST" class="form-horizontal" role="form" id="tbl1">
 	{{form.as_p}}
 </form>
 
