--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -4,6 +4,7 @@
 	{% load static %}
 	{% get_static_prefix as STATIC_PREFIX %}
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Inicio</title>
 
 	<!-- bootstrap -->
