--- a/NotasMedicas/NotasMedicas/templates/captura.html
+++ b/NotasMedicas/NotasMedicas/templates/captura.html
@@ -1,9 +1,30 @@
 {% extends "index.html" %}
 
 {% block captura  %}
+<script type="text/javascript">
+	$(document).ready(function(){
+	    $('[data-toggle="tooltip"]').tooltip({
+	        placement : 'top'
+	    });
+	});
+</script>
 	<h2 class="bg-primary">Captura de notas</h2>
-	<form action="POST" class="form-horizontal" role="form" id="tbl1">
-		{{form.as_p}}
+	<form action="" class="form-horizontal" role="form" method="post" id="tbl1">{% csrf_token %}
+		<table class="table table-condensed ">
+		{% for campo in form.visible_fields  %}
+			<tr>
+				<td>{{campo.label}}</td>
+				<td>{{campo}}</td>
+				{% if campo.errors %}
+					<td>
+						<a href="#" data-toggle="tooltip" data-original-title="{{campo.errors.as_text}}" class="error">
+							<span class="glyphicon glyphicon-exclamation-sign" data-toggle="tooltip" data-original-title="{{campo.errors.as_text}}" aria-hidden="true"></span>
+						</a>
+					</td>
+				{% endif %}
+			</tr>
+		{% endfor %}
+		</table>
 		<input class="btn btn-primary" type="submit" value="Guardar">
 	</form>
 
