--- a/NotasMedicas/NotasMedicas/templates/ingreso.html
+++ b/NotasMedicas/NotasMedicas/templates/ingreso.html
@@ -8,8 +8,11 @@
 	    });
 	});
 </script>
-	<h2 class="bg-primary">Captura de notas</h2>
-	<form action="" class="form-horizontal" role="form" method="post" id="tbl1">{% csrf_token %}
+	<h2 class="bg-primary">Ingreso</h2>
+	<div class="pacAlta">
+		<a href="../paciente" class="btn btn-primary btn-lg">Nuevo paciente</a>
+	</div>
+	<form action="" class="form-horizontal" role="form" method="post" id="captura">{% csrf_token %}
 		<table class="table table-condensed ">
 		{% for campo in form.visible_fields  %}
 			<tr>
