--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -13,6 +13,7 @@
 	
 	<script src="{{STATIC_PREFIX}}js/jquery.js"></script>
 	<script src="{{STATIC_PREFIX}}js/bootstrap.min.js"></script>
+	<script src="{{STATIC_PREFIX}}js/codigo.js"></script>
 	
 </head>
 <body class="homepage">
