--- a/NotasMedicas/NotasMedicas/templates/ingreso.html
+++ b/NotasMedicas/NotasMedicas/templates/ingreso.html
@@ -13,11 +13,17 @@
 		<a href="../paciente" class="btn btn-primary btn-lg">Nuevo paciente</a>
 	</div>
 	<form action="" class="form-horizontal" role="form" method="post" id="captura">{% csrf_token %}
-		<table class="table table-condensed ">
-			{% for campo in form.visible_fields  %}
+		<table class="table table-condensed">
+			{% for campo in form  %}
 				<tr>
 					<td>{{campo.label}}</td>
-					<td>{{campo}}</td>
+					<td>
+						{{campo}}
+						{% if campo.field.widget.attrs.readonly %}
+							<div id="{{campo.name}}_slot" class="col-sm-2 col-md-7 items"></div>
+							<button type="button" class="btn btn-success" data-toggle="modal" data-target="#MyModal" id="btnModal">Capturara detallada</button>
+						{% endif %}
+					</td>
 					{% if campo.errors %}
 						<td>
 							<a href="#" data-toggle="tooltip" data-original-title="{{campo.errors.as_text}}" class="error">
@@ -31,41 +37,26 @@
 		<input class="btn btn-primary" type="submit" value="Guardar">
 	</form>
 
-	<div class="modal fade" id="app_modal">
+	<div class="modal fade col-md-12" tabindex="-1" id="MyModal">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Modal title</h4>
+					<h4 class="modal-title">Antecedentes personales patologicos</h4>
 				</div>
 				<div class="modal-body">
-					<p>One fine body&hellip;</p>
+					<table class="table table-condensed" id="tblModal">
+						<tr>
+							<th>Patología</th>
+							<th>Comentario</th>
+						</tr>
+					</table>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+					<button type="button" class="btn btn-primary">Guardar cambios</button>
 				</div>
 			</div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
-
-	<div class="modal fade" id="lab_modal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Modal title</h4>
-				</div>
-				<div class="modal-body">
-					<p>One fine body&hellip;</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
-
 
 {% endblock %}
