--- a/NotasMedicas/NotasMedicas/static/css/estilos.css
+++ b/NotasMedicas/NotasMedicas/static/css/estilos.css
@@ -65,6 +65,11 @@ form
 	border-style: solid;
 	border-width: 1px;
 }
+.resumen
+{
+	margin: 0 0 0 0.5rem;
+	font-size: 1rem;
+}
 
 @media screen and (min-width: 800px) {
 	#loginform
