--- a/NotasMedicas/NotasMedicas/templates/menu.html
+++ b/NotasMedicas/NotasMedicas/templates/menu.html
@@ -2,35 +2,6 @@
 
 {% block captura  %}
 
-
-<!-- <div class="panel panel-primary">
-	<div class="panel-heading"></div>
-	<div class="panel-body">
-		<div class="notas">
-			<div class="">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="" class="img-thumbnail">
-				<button type="button" class="btn btn-primary">Nota de ingreso</button>
-			</div>
-			<div class="">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="" class="img-thumbnail">
-				<button type="button" class="btn btn-primary">Nota de ingreso</button>
-			</div>
-			<div class="">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="" class="img-thumbnail">
-				<button type="button" class="btn btn-primary">Nota de ingreso</button>
-			</div>
-			<div class="">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="" class="img-thumbnail">
-				<button type="button" class="btn btn-primary">Nota de ingreso</button>
-			</div>
-			<div class="">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="" class="img-thumbnail">
-				<button type="button" class="btn btn-primary">Nota de ingreso</button>
-			</div>
-		</div>
-	</div>	
-</div> -->
-
 <div class="panel panel-primary">
 	<div class="panel-heading">
 		<h2>Menu de notas</h2>
@@ -38,7 +9,7 @@
 	<div class="panel-body" id="menu">
 
 		<div class="row">
-			<div class="col-sm-6 col-md-4 col-lg-3">
+			<div class="col-sm-6 col-md-4 col-lg-2">
 				<div class="thumbnail">
 				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
 					<div class="caption">
@@ -50,31 +21,31 @@
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4 col-lg-3">
+			<div class="col-sm-6 col-md-4 col-lg-2">
 				<div class="thumbnail">
 				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
 					<div class="caption">
-						<h3>Diaria</h3>
+						<h3>Evolución</h3>
 						<p>
-							<a href="" class="btn btn-primary btn-lg" role="button">Capturar</a>
+							<a href="../evolucion" class="btn btn-primary btn-lg" role="button">Capturar</a>
 						</p>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4 col-lg-3">
+			<div class="col-sm-6 col-md-4 col-lg-2">
 				<div class="thumbnail">
 				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
 					<div class="caption">
 						<h3>Gravedad</h3>
 						<p>
-							<a href="#" class="btn btn-primary btn-lg" role="button">Capturar</a>
+							<a href="../gravedad" class="btn btn-primary btn-lg" role="button">Capturar</a>
 						</p>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4 col-lg-3">
+			<div class="col-sm-6 col-md-4 col-lg-2">
 				<div class="thumbnail">
 				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
 					<div class="caption">
@@ -86,7 +57,7 @@
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4 col-lg-3">
+			<div class="col-sm-6 col-md-4 col-lg-2">
 				<div class="thumbnail">
 				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
 					<div class="caption">
