--- a/NotasMedicas/NotasMedicas/templates/ingreso.html
+++ b/NotasMedicas/NotasMedicas/templates/ingreso.html
@@ -24,9 +24,9 @@
 							<button type="button" class="btn btn-success " data-toggle="modal" data-target="#MyModal" id="btnModalCap" data-whatever="{{campo.label}}">
 								Captura
 							</button>
-							<button type="button" class="btn btn-success " data-toggle="modal" data-target="#MyModal" id="btnModalShow" data-whatever="{{campo.label}}">
+							<!-- <button type="button" class="btn btn-success " data-toggle="modal" data-target="#MyModal" id="btnModalShow" data-whatever="{{campo.label}}">
 								Visualizar
-							</button>
+							</button> -->
 						{% endif %}
 					</td>
 					{% if campo.errors %}
