--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -9,9 +9,11 @@
 
 	<!-- bootstrap -->
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/bootstrap.min.css">
+	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/jquery-ui.css">
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/estilos.css"> 
 	
 	<script src="{{STATIC_PREFIX}}js/jquery.js"></script>
+	<script src="{{STATIC_PREFIX}}js/jquery-ui.js"></script>
 	<script src="{{STATIC_PREFIX}}js/bootstrap.min.js"></script>
 	<script src="{{STATIC_PREFIX}}js/codigo.js"></script>
 	
