--- a/NotasMedicas/NotasMedicas/templates/menu.html
+++ b/NotasMedicas/NotasMedicas/templates/menu.html
@@ -2,74 +2,65 @@
 
 {% block captura  %}
 
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		<h2>Menu de notas</h2>
-	</div>
-	<div class="panel-body" id="menu">
-
-		<div class="row">
-			<div class="col-sm-6 col-md-4 col-lg-2">
-				<div class="thumbnail">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
-					<div class="caption">
-						<h3>Ingreso</h3>
-						<p>
-							<a href="../ingreso" class="btn btn-primary btn-lg" role="button">Capturar</a>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-2">
-				<div class="thumbnail">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
-					<div class="caption">
-						<h3>Evolución</h3>
-						<p>
-							<a href="../evolucion" class="btn btn-primary btn-lg" role="button">Capturar</a>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-2">
-				<div class="thumbnail">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
-					<div class="caption">
-						<h3>Gravedad</h3>
-						<p>
-							<a href="../gravedad" class="btn btn-primary btn-lg" role="button">Capturar</a>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-2">
-				<div class="thumbnail">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
-					<div class="caption">
-						<h3>Alta</h3>
-						<p>
-							<a href="#" class="btn btn-primary btn-lg" role="button">Capturar</a>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-6 col-md-4 col-lg-2">
-				<div class="thumbnail">
-				<img src="{{STATIC_PREFIX}}img/n.png" alt="...">
-					<div class="caption">
-						<h3>Defunción</h3>
-						<p>
-							<a href="#" class="btn btn-primary btn-lg" role="button">Capturar</a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="row">
+	<h2 class="bg-primary">
+		Menu de notas 
+		<a href="#menu-toggle"  class="btn btn-primary btn-lg hidden-lg hidden-md">
+			<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+		</a>
+	</h2>
 </div>
+
+ <div id="wrapper">
+
+        <!-- Sidebar -->
+			<div id="sidebar-wrapper">
+				<ul class="sidebar-nav">
+					<li class="sidebar-brand" role="presentation">
+						<a href="#paciente" aria-controls="paciente" role="tab" data-toggle="tab">
+							Paciente
+						</a>
+					</li>
+					{% for nota in datos %}
+						<li role="presentation">
+							<a href="#{{nota.id}}" aria-controls="{{nota.id}}" role="tab" data-toggle="tab">{{nota.descripcion}}</a>
+						</li>	
+					{% endfor %}
+				</ul>
+			</div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="tab-content">
+                    	<div role="tabpanel" class="tab-pane active col-sm-12 col-lg-9" id="paciente">
+							Datos del paciente
+						</div>	
+						{% for nota in datos %}
+							<div role="tabpanel" class="tab-pane col-sm-12 col-lg-9" id="{{nota.id}}">
+								{{nota.descripcion}}
+							</div>	
+						{% endfor %}
+					</div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+ 	<script>
+		$(function () {
+			$('#myTab a:last').tab('show')
+		});
+	    $("a").click(function(e) {
+	        if ($(window).width() < 993) {
+	        	e.preventDefault();
+	        	$("#wrapper").toggleClass("toggled");
+			};
+	    });
+    </script>
 
 {% endblock %}
