--- a/NotasMedicas/NotasMedicas/templates/camas.html
+++ b/NotasMedicas/NotasMedicas/templates/camas.html
@@ -59,9 +59,15 @@
 					<div class="panel-body" >
 					{% for cama in camas %}
 						{% if sect.seccion == cama.seccion %}
-							<a href="../formatos/{{cama.id}}" class="btn btn-primary btn-lg col-xs-12 col-sm-12 col-lg-1 camas" role="button">
-								{{cama.cama}}
-							</a>
+							{% if cama.nombre %}
+								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-primary btn-lg col-xs-12 col-sm-12 col-lg-1 camas" role="button">
+									{{cama.cama}}
+								</a>
+							{% else %}
+								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-default btn-lg col-xs-12 col-sm-12 col-lg-1 camas" role="button">
+									{{cama.cama}}
+								</a>
+							{% endif %}
 						{% endif %}
 					{% endfor %}
 					</div>
