--- a/NotasMedicas/NotasMedicas/templates/camas.html
+++ b/NotasMedicas/NotasMedicas/templates/camas.html
@@ -15,20 +15,16 @@
 	<h2 class="bg-primary">Camas</h2>
 
 	<form action="" class="form-inline busqueda">
-
 		<div class="row">
-			<div  class="form-group col-sm-12 col-xs-12 col-lg-3">
-				<label for="nombre">Nombre</label>
-				<input type="text" class="form-control" id="nombre" name="nombre"> 
+			<div  class="form-group col-sm-12 col-xs-12 col-lg-2">
+				<input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre del paciente"> 
 			</div>
-			<div  class="form-group col-sm-12 col-xs-12 col-lg-3">
-				<label for="nss">NSS</label>
-				<input type="text" class="form-control" id="nss" name="nss"> 
+			<div  class="form-group col-sm-12 col-xs-12 col-lg-2">
+				<input type="text" class="form-control" id="nss" name="nss" placeholder="NSS"> 
 			</div>
-			<div class="form-group col-sm-12 col-xs-12 col-lg-2">
-				<a href="#" class="btn btn-primary" id="BedSearch">Buscar</a>
-			</div>
-			<p>Camas ocupadas: {{n}}</p>
+			<button class="btn btn-primary" type="button">
+				Camas ocupadas:<span class="badge">{{n}}</span>
+			</button>
 		</div>
 	</form>
 	
@@ -63,11 +59,11 @@
 					{% for cama in camas %}
 						{% if sect.seccion == cama.seccion %}
 							{% if cama.nombre %}
-								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-primary btn-lg col-xs-12 col-sm-12 col-lg-1 camas" role="button">
+								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-primary btn-lg col-xs-5 col-sm-5 col-lg-1 camas" role="button">
 									{{cama.cama}}
 								</a>
 							{% else %}
-								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-default btn-lg col-xs-12 col-sm-12 col-lg-1 camas" role="button">
+								<a href="../formatos/{{cama.nss}}" name="{{cama.nombre}}" class="btn btn-default btn-lg col-xs-5 col-sm-5 col-lg-1 camas" role="button">
 									{{cama.cama}}
 								</a>
 							{% endif %}
