Last update read evol

--- a/NotasMedicas/NotasMedicas/templates/ingreso.html
+++ b/NotasMedicas/NotasMedicas/templates/ingreso.html
@@ -8,7 +8,9 @@
 	    });
 	});
 </script>
-	<h2 class="bg-primary">Ingreso</h2>
+	<h2 class="bg-primary">
+		Ingreso
+	</h2>
 	<form action="" class="form-horizontal" role="form" method="post" id="captura">{% csrf_token %}
 		<table class="table table-condensed">
 			{% for campo in form  %}
