--- a/NotasMedicas/NotasMedicas/templates/camas.html
+++ b/NotasMedicas/NotasMedicas/templates/camas.html
@@ -10,6 +10,9 @@
 			source: availableTags,
 			sortResults: true
 		});
+		function my_js_callback(data){
+		    alert(data.message);
+		}
 	});
 </script>
 	<h2 class="bg-primary">Camas</h2>
@@ -22,7 +25,7 @@
 			<div  class="form-group col-sm-12 col-xs-12 col-lg-2">
 				<input type="text" class="form-control" id="nss" name="nss" placeholder="NSS"> 
 			</div>
-			<button class="btn btn-primary" type="button">
+			<button class="btn btn-primary" type="button" onclick="Dajaxice.example.sayhello(my_js_callback);">
 				Camas ocupadas:<span class="badge">{{n}}</span>
 			</button>
 		</div>
