--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	{% load dajaxice_templatetags %}
+	{% dajaxice_js_import %}
 	{% load static %}
 	{% get_static_prefix as STATIC_PREFIX %}
 	<meta charset="UTF-8">
