Dajax & Dajaxice complete
Conf and test do it next step implentation :) :+1:

--- a/NotasMedicas/NotasMedicas/templates/camas.html
+++ b/NotasMedicas/NotasMedicas/templates/camas.html
@@ -10,10 +10,12 @@
 			source: availableTags,
 			sortResults: true
 		});
+	});
+</script>
+<script>
 		function my_js_callback(data){
 		    alert(data.message);
 		}
-	});
 </script>
 	<h2 class="bg-primary">Camas</h2>
 
