--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -5,6 +5,7 @@
 	{% get_static_prefix as STATIC_PREFIX %}
 	{% load dajaxice_templatetags %}
 	<script src="{{STATIC_PREFIX}}dajaxice/dajaxice.core.js" type="text/javascript"></script>
+	<script src="{% static '/static/dajax/jquery.dajax.core.js' %}"></script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Inicio</title>
@@ -15,6 +16,7 @@
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/estilos.css"> 
 	
 	<script src="{{STATIC_PREFIX}}js/jquery.js"></script>
+
 	<script src="{{STATIC_PREFIX}}js/jquery-ui.js"></script>
 	<script src="{{STATIC_PREFIX}}js/bootstrap.min.js"></script>
 	<script src="{{STATIC_PREFIX}}js/codigo.js"></script>
