--- a/NotasMedicas/NotasMedicas/templates/ingreso.html
+++ b/NotasMedicas/NotasMedicas/templates/ingreso.html
@@ -19,6 +19,17 @@
 		})
 	});
 </script>
+<script>
+	function calculate(){
+		Dajaxice.captura.Concat(Dajax.process,{'a':$('#a').val(),'b':$('#b').val()})
+	}
+</script>
+
+<input type="text" value="5" id="a"> x
+<input type="text" value="6" id="b"> =
+<input type="text" value="" id="result">
+<input type="button" value="Concatena!" onclick="calculate();">
+
 <div class="row">
 	<h3 class="bg-info">
 		{% if ingreso %}
