--- a/NotasMedicas/NotasMedicas/templates/index.html
+++ b/NotasMedicas/NotasMedicas/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-mx">
 <head>
 	{% load static %}
 	{% get_static_prefix as STATIC_PREFIX %}
@@ -9,15 +9,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Inicio</title>
-
-	<!-- bootstrap -->
+	
+	<!-- Estilos -->
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/bootstrap.min.css">
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/jquery-ui.css">
 	<link rel="stylesheet" href="{{STATIC_PREFIX}}css/estilos.css"> 
 	
+	<!-- Jquery -->
 	<script src="{{STATIC_PREFIX}}js/jquery.js"></script>
+	<script src="{{STATIC_PREFIX}}js/jquery.autocomplete.min.js"></script>
+	<!--<script src="{{STATIC_PREFIX}}js/currency-autocomplete.js"></script>-->	
 
-	<script src="{{STATIC_PREFIX}}js/jquery-ui.js"></script>
+	<!-- <script src="{{STATIC_PREFIX}}js/jquery-ui.js"></script> -->
 	<script src="{{STATIC_PREFIX}}js/bootstrap.min.js"></script>
 	<script src="{{STATIC_PREFIX}}js/codigo.js"></script>
 	
